--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
     "@angular/service-worker": "~13.0.2",
+    "moment": "^2.29.1",
     "primeflex": "^3.1.0",
     "primeicons": "^4.1.0",
     "primeng": "^13.0.0",
